Remove overflow, remove hard-coded heights, add basic JS functionality, fix styling

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ img {
 }
 body {
   margin: 0;
+  background-color: #cfd8dc;
 }
 
 .left-side {
@@ -47,24 +48,22 @@ button:hover {
 .link-tally p{
   display: inline;
   padding: 0 30px;
-  text-align: center;
+  text-align: left;
   font-size: 1.5em;
   color: #d1d9dd
 }
 
 .right-side {
-  background-color: #cfd8dc;
-  width: 50vw;
+  width: 50%;
   height: 100%;
   float: right;
-  overflow-y: scroll;
 }
 
 
 /* card classes */
   .card-mockup {
     border: 1px solid #607d8b;
-    margin: 10px;
+    margin: 20px;
     background-color: #fff;
     padding: 2%;
     text-align: left;
@@ -76,7 +75,11 @@ button:hover {
     text-decoration-color: #455a5f;
     text-align: right;
   }
-  
+
+  .card-mockup readCard{
+    background-color: #f2f4f4;
+  }
+
   .bottom-text-delete {
     float: right;
   }
@@ -93,8 +96,13 @@ button:hover {
   text-decoration-color: #ffc107;
 }
 
+/* Marked as read classes */
 .card-marked-as-read {
   background-color: #f2f4f4;
+}
+
+.card-marked-as-read bottom-text-read{
+  color: red;
 }
 
 hr {
@@ -106,27 +114,19 @@ hr {
 /* responsiveness */
 
 @media screen and (max-width: 1200px) {
-  html,
-  body {
-    height: 100vh;
-  }
+
   .header {
     font-size: 3.2em;
   }
 }
+/*Tablet LANDSCAPE*/
 
 /*Tablet Size*/
 @media screen and (max-width: 775px) {
-  html,
-  body {
-    overflow-y: scroll;
-    height: 100%;
-  }
 
   .left-side {
     width: 100%;
     height: 30vh;
-    overflow-y: unset;
     padding-bottom: 100px;
   }
 
@@ -140,22 +140,29 @@ hr {
     padding-top: 20px;
   }
 
+  /* can I do this without 375 padding?*/
   .right-side {
     width: 100%;
     height: 100;
-    overflow-y: unset;
-    padding-top: 340px;
-    padding-bottom: 20px;
+    padding-top: 375px;
     float: left;
-    overflow-y: scroll;
   }
 }
 
-/*mobile size*/
+/*phone size*/
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 355px) {
   .left-side {
     height: 30vh;
     font-size: 1em;
   }
+
+  .header {
+    font-size: 2.5em;
+  }
+
+  img {
+    max-width: 15vw;
+  }
 }
+
